--- a/tmis-common/pom.xml
+++ b/tmis-common/pom.xml
@@ -9,10 +9,10 @@
   <modelVersion>4.0.0</modelVersion>
 
   <groupId>com.neoalvin.tmis</groupId>
-  <artifactId>tmis-api</artifactId>
+  <artifactId>tmis-common</artifactId>
   <packaging>jar</packaging>
 
-  <name>tmis-api</name>
+  <name>tmis-common</name>
   <url>http://maven.apache.org</url>
 
   <properties>
@@ -21,15 +21,16 @@
 
   <dependencies>
     <dependency>
+      <groupId>junit</groupId>
+      <artifactId>junit</artifactId>
+      <version>3.8.1</version>
+      <scope>test</scope>
+    </dependency>
+
+    <dependency>
       <groupId>com.neoalvin.tmis</groupId>
       <artifactId>tmis-model</artifactId>
       <version>1.0.1-SNAPSHOT</version>
     </dependency>
-    <dependency>
-      <groupId>com.neoalvin.tmis</groupId>
-      <artifactId>tmis-common</artifactId>
-      <version>1.0.1-SNAPSHOT</version>
-    </dependency>
   </dependencies>
-
 </project>
