--- a/tmis-dao/pom.xml
+++ b/tmis-dao/pom.xml
@@ -1,3 +1,4 @@
+<?xml version="1.0" encoding="UTF-8"?>
 <project xmlns="http://maven.apache.org/POM/4.0.0"
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
@@ -9,30 +10,37 @@
   <modelVersion>4.0.0</modelVersion>
 
   <groupId>com.neoalvin.tmis</groupId>
-  <artifactId>tmis-api</artifactId>
-  <packaging>jar</packaging>
-
-  <name>tmis-api</name>
-  <url>http://maven.apache.org</url>
+  <artifactId>tmis-dao</artifactId>
 
   <properties>
-    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+    <!-- mybatis版本号 -->
+    <mybatis.version>3.2.1</mybatis.version>
   </properties>
-
   <dependencies>
+
+    <!--mybatis依赖 -->
+    <dependency>
+      <groupId>org.mybatis</groupId>
+      <artifactId>mybatis</artifactId>
+      <version>${mybatis.version}</version>
+    </dependency>
+
+    <!-- mybatis/spring包 -->
+    <dependency>
+      <groupId>org.mybatis</groupId>
+      <artifactId>mybatis-spring</artifactId>
+      <version>1.2.0</version>
+    </dependency>
+
+    <!-- mysql驱动包 -->
+    <dependency>
+      <groupId>mysql</groupId>
+      <artifactId>mysql-connector-java</artifactId>
+      <version>5.1.29</version>
+    </dependency>
     <dependency>
       <groupId>com.neoalvin.tmis</groupId>
       <artifactId>tmis-model</artifactId>
-      <version>1.0.1-SNAPSHOT</version>
-    </dependency>
-    <dependency>
-      <groupId>com.neoalvin.tmis</groupId>
-      <artifactId>tmis-common</artifactId>
-      <version>1.0.1-SNAPSHOT</version>
-    </dependency>
-    <dependency>
-      <groupId>com.neoalvin.tmis</groupId>
-      <artifactId>tmis-dao</artifactId>
       <version>1.0.1-SNAPSHOT</version>
     </dependency>
   </dependencies>
