--- a/tmis-ui/pom.xml
+++ b/tmis-ui/pom.xml
@@ -34,6 +34,16 @@
       <artifactId>tmis-model</artifactId>
       <version>1.0.1-SNAPSHOT</version>
     </dependency>
+    <dependency>
+      <groupId>commons-fileupload</groupId>
+      <artifactId>commons-fileupload</artifactId>
+      <version>1.2.1</version>
+    </dependency>
+    <dependency>
+      <groupId>commons-io</groupId>
+      <artifactId>commons-io</artifactId>
+      <version>1.3.2</version>
+    </dependency>
   </dependencies>
   <build>
     <finalName>tmis-ui</finalName>
